[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 统一错误处理
anyhow = "1.0.86"
# 命令行参数解析
clap = { version = "4.5.16", features = ["derive"] }
# csv文件操作
csv = "1.3.0"
# 序列化反序列化，格式适配与转换框架（源格式文件内容--->serde--->目的格式文件内容）
serde = { version = "1.0.209", features = ["derive"] }
